# wakatime-annual-report

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml
src/: host.rs  lib.rs  main.rs  polars.rs  report.rs  wakatime.rs
src/generated_types/: day.rs  mod.rs  range.rs  user.rs
webpage/: .prettierrc.json  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
webpage/public/: output.json
webpage/src/: App.vue  main.ts  typings.d.ts
webpage/src/components/report/: DayComponent.vue  LanguageTime.vue  ProjectComponent.vue  TotalTime.vue
webpage/src/utils/: router.ts  time.ts
webpage/src/views/: ErrorView.vue  HomeView.vue
webpage/src/views/report/: DayTime.vue  LanguageTime.vue  LateWorkTime.vue  ProjectTime.vue  ReportView.vue  TotalTime.vue
