[package]
name = "wakatime-annual-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
polars = { version = "0.35.4", features = ["lazy","diff","strings","polars-io"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
